- Billing: three new optional invoice PDF columns.
- Calendar: fixed bug where an exception event is created twice.

04-06-2014 5.0.63
- ExportXLS error fixed
- Added div overlay to the print function so the links in the preview should not be clickable anymore
- Updated German

03-06-2014 5.0.62
- Fixed missing ExportXLS error when exporting.
- Fixed problem with address list changes. Only save them when the address list settings panel is enabled.
- Updated German and Czech language
- Added Brazilian Portugese holidays file

28-05-2014 5.0.61
- Limit file search index size to 10MB
- Send an empty reminder object in sync so reminder will be cleared on clients
- Removed the flash upload runtime from the plupload uploader because it was causing problems in older IE browsers.(Most browsers support HTML5 anyway)
- Fixed error when unchecking the "link company" and "link contact" in the email message panel.
- Fixed problem with smime certificate check when changing the "from" field in the email composer
- Fixed upload button for smime PKS12 file in email account dialog
- cleanup links and search cache on deletion of module

21-05-2014 5.0.60
- Template bug in site module.

21-05-2014 5.0.59
- Sorting and page size bugs in projects2
- Reply all in e-mail was broken in previous release
- Last time entry chopped off in browser.

19-05-2014 5.0.58
- Fixed access denied error in GOTA because java made an extra request to the 
  codebase url defined in the jnlp file
- Removed mail headers that caused some spam filters to treat mail as spam.
- BUG FIX: When using different templates for accounts a sender change needed 
  two attempts when replying
- Formprocessor: Send the email message to the addressbook owner in his own language.
- HTML editor: Fixed problem with syncing text in the html editor when changing between html and source mode.
- Google Drive: fixed problem with authenticate and empty file_id
- Billing: Enabled template tags in the closing text
- Updated Norwegian