@@ -619,3 +619,26 @@ $l['skippedDeleteHasFiles']='Preskočeno brisanje, model sadrži direktorije ili
 $l['foundDuplicates']='Pronađeno %s duplikata.';
 $l['clickToDeleteDuplicates']='Kliknite ovdje kako biste obrisali najnovije duplikate označene crveno.';
 $l['folderUpload']='Direktoriji (zahtjeva Javau)';
+
+$l['areYouSureDeleteItem']= 'Jeste li sigurni da želite obrisati \'{item}\'?';
+$l['short_months'][1]='Sij';
+$l['short_months'][2]='Vel';
+$l['short_months'][3]='Ožu';
+$l['short_months'][4]='Tra';
+$l['short_months'][5]='Svi';
+$l['short_months'][6]='Lip';
+$l['short_months'][7]='Srp';
+$l['short_months'][8]='Kol';
+$l['short_months'][9]='Ruj';
+$l['short_months'][10]='Lis';
+$l['short_months'][11]='Stu';
+$l['short_months'][12]='Pro';
+$l['hu']= 'Mađarski';
+$l['report']='Izvještaj';
+$l['namelessItem']= 'Bezimena stavka';
+$l['importFileType']= 'Uvoz tipa datoteke';
+$l['maybeMaxUploadExceeded']= 'Poslužitelj nije primio potrebne parametre od vašeg web preglednika. Vjerovatno je prekoračena maksimalna veličina datoteke od %sMb.';
+$l['relationDeleteRestrict']="Ne možete obrisati ovaj %s zato što sadrži '%s' stavke. Prvo ih uklonite.";
+$l['pspell_lang']='en';
+$l['dependenciesCannotDelete']="Ne možete ukloniti trenutni modul zato što ga koriste sljedeći moduli: %s.";
+$l['MailboxNotFoundException']= "Nije moguće otvoriti mapu \"%s\". Provjerite postavke svog računa e-pošte.";
