@@ -278,3 +278,20 @@ $l['downloadPhotoUrl']='Preuzmite sliku sa URL-a';
 $l['orBrowseComputer']='ili prenesite sa svog računala';
 $l['currentImage']='Trenutna slika';
 $l['downloadFullImage']='Preuzmi cijelu sliku';
+
+$l['cmdFieldsetCompany']= 'Detalji o tvrtki';
+$l['contactCellular2']= "Drugi mobitel";
+$l['upcomingBirthdays']= "Nadolazeći rođendani";
+$l['age']= "Starost";
+$l['actionDate']='Datum radnje';
+$l['selectCurrentActions']='Prikaži aktivne';
+$l['showActieveToolTip']='Prikaži samo kontakte koji imaju važeći datum radnje.';
+$l['linkedinUrl']= 'LinkedIn URL';
+$l['facebookUrl']= 'Facebook URL';
+$l['twitterUrl']= 'Twitter URL';
+$l['skypeName']= 'Skype naziv';
+$l['cmdPanelSocialMedia']= 'Društvene mreže';
+$l['setCurrentTemplateAsDefaultEAccount']='Postavi trenutni predložak kao zadani za ovaj račun e-pošte';
+$l['callOnSkype']= 'Nazovi na Skype';
+$l['userDefaultTemplate']= 'Zadani predložak korisnika';
+$l['exportContactsWithCompanies']= 'Kontakti sa tvrtkama';
